src/sass/main.scss
* {
   box-sizing: border-box;
   font-family: 'Open Sans', sans-serif;
   list-style-type: none;
}
@mixin bgimage {
  background-repeat: no-repeat;
  background-position: center;
  background-size: cover;
}

h3 {
  margin-top: 25px;
  margin-bottom: 25px;
  font-weight: 500;
}

h4, .media {
  font-weight: 300;
}

//nav bar items
.navbar {
  margin-bottom: 0px;
  font-weight: 100;
  letter-spacing: 2px;
}
.navbar-header {
  padding-left: 60px;
  .navbar-brand {
    font-size: 25px;
  }
}
.navbar-nav {
  padding-right: 60px;
}
.dropdown-toggle {
  padding-top: 15px;
  color: grey;
  padding-left: 10px;
  padding-right: 10px;
}

li.bold {
  a {
    color: green;
  }
}

//footer
.footer {
  margin-top: 30px;
  margin-bottom: 30px;
  height: 75px;
}

//carousel
.slide1 {
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1442115597578-2d0fb2413734?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80");
  height: 600px;
  width: 100%;
}
.slide2 {
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1475483768296-6163e08872a1?dpr=2&auto=compress,format&fit=crop&w=376&h=251&q=80");
  height: 600px;
}
.slide3 {
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1434472007488-8d47f604f644?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80");
  height: 600px;
}
.carousel-caption
  h1 {
    text-align: center;
    font-size: 45px;
    color: white;
    margin-bottom: 40px;
    font-family: 'Homemade Apple', cursive;
  }
  h3{
    margin: 15px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
  }
  p{
    font-size: 15px;
    line-height: 22px;
    margin-bottom: 50px;
    font-family: 'Open Sans', sans-serif;
    font-weight: 300;
  }

//login
.login {
  position: relative;
  padding-top: 40px;
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1477453559950-e541fa922120?dpr=2&auto=format&fit=crop&w=1500&h=1134&q=80");
  height: 800px;
  width: 100%;

  h3 {
    padding-bottom: 20px;
  }

  .jumbotron {
    position: relative;
    margin-left: 300px;
    margin-right: 300px;
    padding-top: 20px;
    border-radius: 5px;
    opacity: .91;
  }
}

//signin
.register {
  position: relative;
  padding-top: 40px;
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1459515581694-46b4d817903b?dpr=2&auto=format&fit=crop&w=1500&h=1124&q=80");
  height: 800px;
  width: 100%;

  h3 {
    padding-bottom: 20px;
  }

  .jumbotron {
    position: relative;
    margin-left: 300px;
    margin-right: 300px;
    padding-top: 20px;
    border-radius: 5px;
    opacity: .91;
  }
}

//add a group
.addgroup {
  position: relative;
  padding-top: 40px;
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1461237439866-5a557710c921?dpr=2&auto=format&fit=crop&w=1500&h=997&q=80");
  height: 800px;
  width: 100%;

  .jumbotron {
    position: relative;
    margin-left: 300px;
    margin-right: 300px;
    padding-top: 15px;
    border-radius: 5px;
    opacity: .91;
    h3 {
      margin-top:10px;
      margin-bottom: 4px;
    }
    p {
      text-align: center;
      font-size: 15px;
      padding-bottom: 15px;
    }
  }
  .form-control {
    width: 300px;
  }
}

//add a meeting
.addmeeting {
  position: relative;
  padding-top: 40px;
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1422479516648-9b1f0b6e8da8?dpr=2&auto=format&fit=crop&w=1500&h=1001&q=80");
  height: 800px;
  width: 100%;

  .jumbotron {
    position: relative;
    margin-left: 300px;
    margin-right: 300px;
    padding-top: 15px;
    border-radius: 5px;
    opacity: .93;
    p {
      text-align: center;
      font-size: 15px;
      padding-bottom: 15px;
    }
    .organizer {
      margin-left: 50px;
    }
  }
  .form-control {
    width: 300px;
  }
}

//search page and results
.searchpage {
  position: relative;
  padding-top: 40px;
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1433650552684-d4004a945d6c?dpr=2");
  height: 800px;
  width: 100%;
  .jumbotron {
    position: relative;
    margin-left: 300px;
    margin-right: 300px;
    padding-top: 15px;
    border-radius: 5px;
    opacity: .95;
    h3 {
      margin-top: 10px;
      margin-bottom: 4px;
    }
    p {
      text-align: center;
      font-size: 15px;
      padding-bottom: 0px;
    }
  }
  .form-control {
    width: 300px;
  }
  .result {
    margin-bottom: 0px;
    padding: 0px;
    font-size: 15px;
  }
}

//nearby page
.nearby {
  position: relative;
  padding-top: 40px;
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1444212568492-d2799d30943b?dpr=2&auto=format&fit=crop&w=1500&h=998&q=80");
  height: 800px;
  width: 100%;

  .jumbotron {
    position: relative;
    margin-left: 2.5px;
    margin-right: 20px;
    padding: 15px;
    border-radius: 5px;
    #map {
     width: 100%;
     height: 400px;
    }
  }
  .search-resuts {
    height: 400px;
  }
  .nearbyresults {
    background-color: #EEEEEE;
    border-radius: 5px;
    overflow:scroll;
    margin-left: 20px;
    margin-right: 2.5px;
    height: 430px;
    opacity: .96;
    h4{
      margin-bottom: 0px;
    }
    p {
      margin-bottom: 27px;
      padding-top: 4px;
    }
  }
  .selectmile {
    width: 125px;
  }
  .groupsnearby {
    padding-top: 15px;
  }
}

//group detail page
.group {
  position: relative;
  padding-top: 40px;
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1461595520627-42e3c83019bc?dpr=2&auto=format&fit=crop&w=1500&h=844&q=80");
  height: 800px;
  width: 100%;

  .jumbotron {
    position: relative;
    margin-left: 200px;
    margin-right: 200px;
    padding-top: 15px;
    padding-bottom: 15px;
    border-radius: 5px;
    opacity: .96;
    p {
      font-size: 15px;
      margin-bottom: 4px;
    }
    h3 {
      margin-top: 5px;
    }
  }
  .groupdetail {
    position: relative;
    margin-left: 200px;
    margin-right: 200px;
    border-radius: 5px;

    .grouplist {
      background-color: #EEEEEE;
      border-radius: 5px;
      opacity: .96;
      height: 400px;
      overflow:scroll;
      padding: 15px;
    }
    .memberlist {
      background-color: #EEEEEE;
      border-radius: 5px;
      opacity: .96;
      height: 400px;
      overflow:scroll;
      padding: 15px;
    }
    .meetingtime {
      font-size: 11px;
      margin-bottom: 5px;
    }
  }
}

//meeting detail
.meeting {
  position: relative;
  padding-top: 40px;
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1471107340929-a87cd0f5b5f3?dpr=2&auto=compress,format&fit=crop&w=376&h=282&q=80");
  height: 1200px;
  width: 100%;

  .jumbotron {
    position: relative;
    margin-left: 200px;
    margin-right: 200px;
    padding-top: 15px;
    padding-bottom: 15px;
    border-radius: 5px;
    opacity: .95;
    .panel-default{
      background-color: #EEEEEE;
      border: none;
    }
    form {
      margin-top: 20px;
      width: 80%;
      margin-left: 100px;
    }
    h4 {
      padding-left: 100px;
      padding-right: 100px;
      background-color: #EEEEEE;
      border: none;
      font-size: 15px;
    }
    .info {
      padding-top: 5px;
      font-size: 15px;
    }
    .headers {
      font-weight: 600;
    }
    .question {
      line-height: 1.5;
    }
  }
  .notes {
    position: relative;
    margin-top: 40px;
    margin-left: 200px;
    margin-right: 200px;
    padding-top: 15px;
    padding-bottom: 15px;
    border-radius: 5px;
    background-color: #EEEEEE;
    padding: 20px;
    .notetitle {
      font-size: 20px;
      font-weight: 500;
      margin-bottom: 10px;
    }
    h5 {
      margin-bottom: 3px;
      color: blue;
    }
    .notebody{
      margin:1px;
    }
    textarea {
      margin-top: 20px;
      width: 100%;
      // margin-left: 100px;
      margin-bottom: 5px;
      height: 90px;
    }
    .checkbox, .addnote {
      margin-left: 100px;
    }
    .note {
      color: #4183BC;
    }
    p {
      margin-top: 15px;
      margin-bottom: 5px;
    }
  }
}

//profile
.profiledetail {
  position: relative;
  padding-top: 40px;
  @include bgimage;
  background-image: url("https://images.unsplash.com/photo-1434030216411-0b793f4b4173?dpr=2&auto=format&fit=crop&w=1500&h=1000&q=80");
  height: 1100px;
  width: 100%;

  .jumbotron {
    position: relative;
    margin-left: 250px;
    margin-right: 250px;
    padding-top: 15px;
    border-radius: 5px;
    opacity: .93;
    padding: 20px;
    h3 {
      margin-top: 10px;
      margin-bottom: 4px;
      text-transform: uppercase;
    }
    p {
      font-size: 13px;
    }
  }
  .grouptable {
    padding: 25px;
    text-align: center;
    a {
      font-size: 18px;
    }
  }
  .meetingtable {
    padding: 10px;
    text-align: left;
    a {
      font-size: 15px;
    }
  }
  .meetingdate {
    font-size: 15px;
    margin-bottom: 5px;
  }
}

